# co2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  broken  command.md  create_bundle.sh  cspell-words.txt  cspell.json  fmt.nu  mise.toml  opencode.json  test_bundle.sh
.cargo/: config.toml
.github/workflows/: build-bundle.yml  ci.yml  release-trunk.yml  release.yml
.opencode/agents/: co2-ast.md  co2-crate-sig.md  co2-driver.md  co2-hir.md  co2-manager.md  co2-mir.md  co2-parser.md  co2-preprocessor.md  co2-test-harness.md  rustc-public-generative.md
bundler/: build-bundle.nu  build-ce-bundle.nu  bundle-smoke-test.nu  ce-smoke-test.nu  env.sh  prepare-payload.nu  test-bundle.nu  test-ce-bundle.nu
co2/: Cargo.toml
co2-multicall/: Cargo.toml
co2-multicall/src/: main.rs
co2/src/: detect.rs  main.rs  mir.rs  types.rs
co2_ast/: Cargo.toml
co2_ast/src/: diagnostic.rs  lib.rs  pretty.rs  resolver.rs  span.rs  transform.rs
co2_ast_resolved/: Cargo.toml
co2_crate_sig/: Cargo.toml
co2_crate_sig/src/: ast_resolver.rs  attr.rs  ctx.rs  lib.rs  lowering.rs  mir.rs  resolver.rs  span.rs  struct_manager.rs  ty.rs
co2_driver_lib/: Cargo.toml
co2_driver_lib/src/: hir_ty.rs  lib.rs  mir.rs  span.rs  time_report.rs  types.rs
co2_hir/: Cargo.toml
co2_hir/src/: decl.rs  expr.rs  initializer_tree.rs  item.rs  lib.rs  resolver.rs  stmt.rs  ty.rs
co2_hir_mir/: Cargo.toml
co2_hir_mir/src/: ir.rs  lib.rs  lower.rs
co2_mir/: Cargo.toml
co2_mir/src/: allocation.rs  basic_block.rs  build.rs  initializer_tree.rs  lib.rs  operand.rs  optimization.rs  place.rs  rvalue.rs
co2_parser/: Cargo.toml  c_grammar_reference
co2_parser/src/: diagnostic.rs  hir.rs  lexer.rs  lib.rs  main.rs  parser.rs  rust_ast.rs  type_ir.rs
co2_parser/src/hir/: data_structures.rs  lowering.rs  pretty_print.rs
co2_preprocessor/: Cargo.toml  README.md
co2_preprocessor/src/: builtin_macros.rs  conditionals.rs  expr_eval.rs  includes.rs  lib.rs  macro_defs.rs  macro_token.rs  pipeline.rs  pragmas.rs  predefined_macros.rs  text_processing.rs  tokenizer.rs  utils.rs
co2_test_harness/: Cargo.toml  README.md
co2_test_harness/src/: cli.rs  compiler.rs  debuginfo.rs  error.rs  main.rs  suite.rs  test_case.rs  ui.rs  util.rs
co2c/: Cargo.toml
co2c/src/: main.rs
co2cargo/: Cargo.toml
co2cargo/src/: lib.rs
co2cc/: Cargo.toml  build.rs
co2cc/src/: lib.rs
co2fmt/: Cargo.toml  README.md
co2fmt/src/: config.rs  error.rs  formatter.rs  lexer.rs  lib.rs  token.rs
co2miri/: Cargo.toml
co2miri/src/: lib.rs
co2rustc/: Cargo.toml  build.rs
co2rustc/src/: detect.rs  lib.rs
co2rustdoc/: Cargo.toml
co2rustdoc/src/: lib.rs
docs/: README.md  ai_dump.md  c_successor.md  cargo_third_party.md  installation.md  known_incompatibilities_with_c.md  known_incompatibilties_with_c.md  language_guide.md  quick_tour.md  vs_other_langs.md
docs/agent_context/: README.md  convert_a_c_project_to_co2.md
docs/contributing/: README.md  llm_policy.md
docs/vision/: co2pp.md  lingua_franca.md
editors/vscode/: .vscodeignore  README.md  install.nu  language-configuration.json  package.json
examples/: Cargo.toml
examples/cli-args-summary/: Cargo.toml  expected_output.txt
examples/cli-args-summary/src/: main.co2
examples/co2-features/: Cargo.toml  expected_output.txt
examples/co2-features/src/: main.co2
examples/hashmap-basics/: Cargo.toml  expected_output.txt
examples/hashmap-basics/src/: main.co2
examples/hello-world/: expected_output.txt
examples/hello-world/src/: main.co2
examples/linked-list-c/: Cargo.toml  expected_output.txt
examples/linked-list-c/src/: main.co2
examples/option-and-result/: Cargo.toml  expected_output.txt
examples/option-and-result/src/: main.co2
examples/reqwest-gh-stars/: Cargo.toml  expected_output.txt
examples/reqwest-gh-stars/src/: main.co2  main.rs
examples/sorting-with-callback/: Cargo.toml  expected_output.txt
examples/sorting-with-callback/src/: main.co2
examples/string-basics/: expected_output.txt
examples/string-basics/src/: main.co2
examples/struct-geometry/: Cargo.toml  expected_output.txt
examples/struct-geometry/src/: main.co2
examples/timing-demo/: Cargo.toml  expected_output.txt
examples/timing-demo/src/: main.co2
examples/vector-basics/: Cargo.toml  expected_output.txt
examples/vector-basics/src/: main.co2
fake_hello_world/src/: main.rs
gh-pages/: index.html  install.sh  style.css
rustc_public_generative/: Cargo.toml
rustc_public_generative/examples/: echo_file.rs  point_length.rs
rustc_public_generative/src/: hir_structure.rs  hir_ty.rs  internal.rs  lib.rs
tests/: README.md  snapshot-utils.nu
tests/c/: after_multiline_comment.c  atomic_gnu_builtins.c  bad_condition.c  bad_tokens.c  bad_type_specifier.c  basic.c  binop_invalid.c  builtins.c  compound_literals.c  containing_typeof.c  declarator_span.c  declarator_span.h  enum.c  enum_array_len_enum_const.c  exit.c  generic.c  hex_literal_u_suffix.c  include_error.c  include_error.h  include_span_bug.c  include_span_bug.h  integer_promotion.c  libc_headers.c  likely_unlikely.c  macros.c  memchr_dependency_shadow.c  nested_items.c  non_const_consteval.c  null_fnptr_double_cast.c  offsetof_macro_static.c  overflow_lint.c  parser_ambiguity.c  quickjs_bigint_exact_shape.c  selfref.c  signbit.c  sizeof_struct_array.c  static_array_param.c  stdout.c  strings.c  strings.out  (+8 more)
tests/co2/: basic_rust.co2  co2cc_can_use_std.c  co2cc_can_use_std2.c  host_attr_only.rs  improper_c_type.co2  inline_mod.co2  int_literals.co2  (+4 more)
(+426 files in other folders)
