[workspace]
members = [
  "rustc_public_generative",
  "co2_parser",
  "co2_preprocessor",
  "co2_hir",
  "co2_mir",
  "co2_driver_lib",
  "co2rustc",
  "co2rustdoc",
  "co2cc",
  "co2cargo",
  "co2miri",
  "co2-multicall",
  "co2_test_harness",
  "co2_crate_sig",
  "co2_ast",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
similar_names = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"
inline_always = "allow"
trivially_copy_pass_by_ref = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
large_enum_variant = "allow"
