[package]
name = "co2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "co2"
path = "src/main.rs"

[dependencies]
rustc_public_generative = { path = "../rustc_public_generative" }
co2_parser = { path = "../co2_parser" }
co2_hir_mir = { path = "../co2_hir_mir" }
itertools = "0.14.0"

[package.metadata.rust-analyzer]
rustc_private = true
