[package]
name = "co2_driver_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "co2_driver_lib"
path = "src/lib.rs"

[dependencies]
rustc_public_generative = { path = "../rustc_public_generative" }
co2_hir = { path = "../co2_hir" }
co2_mir = { path = "../co2_mir" }
co2_parser = { path = "../co2_parser" }

[package.metadata.rust-analyzer]
rustc_private = true
