[package]
name = "co2_hir"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
co2_ast = { path = "../co2_ast" }
rustc_public_generative = { path = "../rustc_public_generative" }
la-arena = "0.3.1"
co2_crate_sig = { version = "0.1.0", path = "../co2_crate_sig" }
