[package]
name = "co2_parser"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ariadne = "0.6.0"
chumsky = "0.11"
co2_ast = { version = "0.1.0", path = "../co2_ast" }
co2_preprocessor = { version = "0.1.0", path = "../co2_preprocessor" }
itertools = "0.14.0"
la-arena = "0.3.1"
