[package]
name = "rustc_public_generative"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Using rustc_private crates from the installed nightly toolchain.
# We intentionally avoid exposing rustc_* types in the public API.

[package.metadata.rust-analyzer]
rustc_private=true